--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
-    "mongoose": "^5.11.18"
+    "koa2-cors": "^2.0.6",
+    "mongoose": "^5.11.18",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1"
+  },
+  "devDependencies": {
+    "bcrypt": "^5.0.1",
+    "nodemon": "^2.0.7"
   }
 }
