--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
+    "koa-jwt": "^4.0.1",
     "koa-router": "^10.0.0",
     "koa2-cors": "^2.0.6",
     "mongoose": "^5.11.18",
@@ -20,7 +22,6 @@
     "sass-loader": "^11.0.1"
   },
   "devDependencies": {
-    "bcrypt": "^5.0.1",
-    "nodemon": "^2.0.7"
+    "bcrypt": "^5.0.1"
   }
 }
